Replace chrono with httpdate internally
Remove chrono as a dependency to avoid any connection to the transitive [CVE-2020-26235 in `time` 0.2](https://github.com/rustsec/advisory-db/blob/9e93a3df4a54e70f2539a2ecdc3d70beef64c856/crates/time/RUSTSEC-2020-0071.md). This also requires removing chrono from the public API of `CookieBuilder`, which is probably for the best anyway before it is released so that we aren't tied to it. Expose `SystemTime` types instead, which both chrono and `time` are compatible with, should the consumer of the API choose to use either of those crates.

Replace formatting and parsing of HTTP date formats with the aptly-named    `httpdate` crate, which implements exactly those two operations and no more. As a side benefit this reduces our total transitive dependency count by 3 when the `cookies` feature is enabled.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,10 @@ status = "actively-developed"
 
 [features]
 default = ["http2", "static-curl", "text-decoding"]
-cookies = ["chrono"]
+cookies = ["httpdate"]
 http2 = ["curl/http2"]
 json = ["serde", "serde_json"]
-psl = ["parking_lot", "publicsuffix"]
+psl = ["httpdate", "parking_lot", "publicsuffix"]
 spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
 static-ssl = ["curl/static-ssl"]
@@ -47,12 +47,12 @@ sluice = "0.5.4"
 url = "2.2"
 waker-fn = "1"
 
-[dependencies.chrono]
-version = "0.4"
-optional = true
-
 [dependencies.encoding_rs]
 version = "0.8"
+optional = true
+
+[dependencies.httpdate]
+version = "1"
 optional = true
 
 [dependencies.mime]
